Fix menu overflow

--- a/web-ui/src/main/resources/catalog/views/sextant/api.css
+++ b/web-ui/src/main/resources/catalog/views/sextant/api.css
@@ -14057,7 +14057,7 @@ yx-axis
 }
 .gn ul.gn-resultview li.gn-grid .gn-md-relations .dropdown-menu,
 .gn ul.gn-resultview li.gn-grid .gn-md-links .dropdown-menu {
-  max-width: 300px;
+  max-width: 250px;
   font-size: 12px;
 }
 .gn ul.gn-resultview li.gn-grid .gn-md-relations .dropdown-menu li a,
