--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -844,7 +844,7 @@ ul.gn-resultview {
     }
     .gn-md-relations, .gn-md-links {
       .dropdown-menu {
-        max-width: 300px;
+        max-width: 250px;
         font-size: 12px;
         li a {
           padding-top: 1px;
